14-resourceQuota.yaml
## kubectl get quota -n <namespace_name>



---
apiVersion: v1
kind: Namespace 
metadata: 
  name: food

---
apiVersion: v1 
kind: Pod 
metadata:
  name: rq-pod 
  namespace: food
spec:
  containers:
    - name: cont-1
      image: shaikmustafa/dm 
      ports:
        - containerPort: 80
      resources:
        requests: 
          cpu: "100m" 
          memory: "250Mi"
        limits: 
          cpu: "150m" 
          memory: "500Mi"
