22-liveness_readynes_probes.yaml
# Liveness probe and Readiness probe
# ==================================

# --> Liveness and Readiness Probes are mechanisms in Kubernetes used to check the health and status of containers within a Pod. They help ensure that applications are running as expected and can serve traffic.


# Liveness Probe
# -----------------
# Suppose that a Pod is running our application inside a container, but due to some reason let’s say memory leak, cpu usage, application deadlock etc the
# application is not responding to our requests, and stuck in error state.

# Liveness probe checks the container health as we tell it do, and if  some reason the liveness probe fails, it restarts the container.

# Readiness Probe
# ---------------
# This type of probe is used to detect if a container is ready to accept traffic. You can use this probe to manage which pods are used as backends for load balancing services. 

# If a pod is not ready,  then be removed from the list of load balancers.

---
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
spec:
  containers:
    - name: cont-1
      image: ubuntu
      command: ["/bin/bash", "-c", "touch /opt/myfile; sleep 1000;"]
      livenessProbe:
        exec:
          command:
            - cat 
            - /opt/myfile 
        initialDelaySeconds: 5
        periodSeconds: 5
        timeoutSeconds: 30

      readinessProbe:
        exec:
          command:
            - cat
            - /opt/myfile
        initialDelaySeconds: 5
        periodSeconds: 5
        timeoutSeconds: 5
