27-pv-pvc-static-efs.yaml
## cerate EFS filesystem
## edit the security group, so that it will allow port 2049 form worker nodes -- efs security group
## we should have drivers installed efs drivers

---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    purpose: efs-static
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: nginx-html
      mountPath: /usr/share/nginx/html
  nodeSelector:
    topology.kubernetes.io/zone: us-east-1b
  volumes:
  - name: nginx-html
    persistentVolumeClaim:
      claimName: efs-static
