28-pv-pvc-dynamic-efs.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    purpose: efs-dynamic
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: nginx-html
      mountPath: /usr/share/nginx/html
  volumes:
  - name: nginx-html
    persistentVolumeClaim:
      claimName: efs-dynamic
