03-service_cluster_IP.yaml
## kubectl get svc
## kubectl describe svc <service_name>



---
apiVersion: v1
kind: Pod 
metadata:
  name: pod-1
  labels:
    app: paytm
    env: dev
spec:
  containers:
    - name: cont-1
      image: shaikmustafa/dm
      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: pod-service
spec:
  type: ClusterIP
  selector:
    app: paytm
    env: dev
  ports:
  - port: 80  #this is service port
    targetPort: 80 #this is container Port
