04-node_port.yaml
apiVersion: v1
kind: Pod
metadata:
  name: javawebapp-1
  labels:
    app: javawebapp
spec:
  containers:
    - name: javawebapp
      image: shaikmustafa/dm
      ports: 
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: javawebappsvcnp
spec:
  type: NodePort
  selector:
    app: javawebapp
  ports:
    - port: 80
      targetPort: 80
