05-load_balancer.yaml
---
apiVersion: v1
kind: Pod 
metadata:
  name: pod-3
  labels:
    app: paytm
    env: dev
spec:
  containers:
    - name: cont-2
      image: shaikmustafa/dm
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: my-svc
spec:
  type: LoadBalancer
  selector: 
    app: paytm
  ports:
    - port: 80
      targetPort: 80
