06-replicaSet.yaml
## kubectl get rs
## kubectl describe rs <rs_name>



---
apiVersion: v1 
kind: Service
metadata: 
  name: appsvcnp
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31001
