09-stateful_set.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: ex-statefullset
spec:
  replicas: 3
  selector:
    matchLabels:
      app: satefulset
  template:
    metadata:
      labels:
        app: statefulset
    spec:
      containers:
        - name: state-cont 
          image: shaikmustafa/dm 
          ports:
            - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: statesvcnp
spec:
  type: NodePort
  selector:
    app: statefulset
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30084
