11-namespace.yaml
## kubectl get ns
## kubectl get po -n <namespace_name>
## kubectl get all -n <namespace_name> --> to get all
## kubectl create ns stage
## kubectl config view --> shows current namespace or kubectl config current-context
## kubectl config set-context --current --namespace=<ns_name> ---> used to switch namespace


---
apiVersion: v1 
kind: Namespace 
metadata:
  name: stagging

---
apiVersion: v1
kind: Pod 
metadata: 
  name: pod-1
  namespace: stagging
  labels:
    app: dev
spec:
  containers:
    - name: cont-1
      image: shaikmustafa/dm
      ports:
        - containerPort: 80

---
apiVersion: v1 
kind: Service
metadata:
  name: svcnp
  namespace: stagging
spec:
  type: NodePort
  selector:
    app: dev 
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31002
