26-pv-pvc-dynamic-ebs.yaml
## DYNAMIC PROVISIONING
###########################
# 1. Volume should be created automatically
# 2. there is another object called storageClass that can create storage dynamically based on the request.
# here external voume and pv would be created automatically


## install aws ebs csi drivers form github

## kubectl get sc
## kubectl get pv
## kubectl get pvc


---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    purpose: ebs-dynamic
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: nginx-html
      mountPath: /usr/share/nginx/html
  # nodeSelector:
  #   topology.kubernetes.io/zone: us-east-1b
  volumes:
  - name: nginx-html
    persistentVolumeClaim:
      claimName: ebs-dynamic
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ebs-dynamic
spec:
  type: LoadBalancer
  selector:
    purpose: ebs-dynamic
  ports:
    - protocol: TCP
      port: 80 # service port
      targetPort: 80 # container port
      nodePort: 30007
