21-network_policy.yaml
## I have 4 pods swiggy, zomato , uber , client and only swiggy pod need to communicate with client POd

## swiggy doesnt communicate with other pods

## kubectl get netpol
## kubectl exec -it <pod_name> -c <cont_name> -- ping <ipaddress>
---
apiVersion: v1
kind: Pod
metadata:
  name: swiggy
  labels:
    app: swiggy
spec:
  containers:
    - name: cont-1
      image: nginx
      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: zomato
  labels:
    app: zomato
spec:
  containers:
    - name: cont-1
      image: nginx
      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: uber
  labels:
    app: uber
spec:
  containers:
    - name: cont-1
      image: nginx
      ports:
        - containerPort: 80


---
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  labels:
    app: client-pod
spec:
  containers:
    - name: cont-1
      image: nginx
      ports:
        - containerPort: 80

---
## allow-swiggy-to-client
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-swiggy-to-client
spec:
  podSelector:
    matchLabels:
      app: client-pod  # Target pod
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: swiggy  # allow only swiggy

---
## allow-swiggy-egress-to-client
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-swiggy-egress-to-clinet
spec:
  podSelector:
    matchLabels:
      app: swiggy # This policy applies to SWIGGY pod
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: client-pod  # only client-pod allowd

---
## deny other pods to communicate
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyall
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
